data/issues_nolabel/nolabel_test_8341.txt
when i use tensorflow v1.01  python3 there are SyntaxError: invalid syntax

when i use tensorflow-gpu v1.01  python3.5 there are SyntaxError: invalid syntax
but i only install tensorflow-gpu v1.01 python2.7 there are no  SyntaxError: invalid syntax
like i use tensorboard when i have installed tensorflow-gpu v1.01 python3.5
#cy@cy:~/PycharmProjects/models-master/slim$ tensorboard --logdir=./
I tensorflow/stream_executor/dso_loader.cc:135] successfully opened CUDA library libcublas.so.8.0 locally
I tensorflow/stream_executor/dso_loader.cc:135] successfully opened CUDA library libcudnn.so.5 locally
I tensorflow/stream_executor/dso_loader.cc:135] successfully opened CUDA library libcufft.so.8.0 locally
I tensorflow/stream_executor/dso_loader.cc:135] successfully opened CUDA library libcuda.so.1 locally
I tensorflow/stream_executor/dso_loader.cc:135] successfully opened CUDA library libcurand.so.8.0 locally
Traceback (most recent call last):
File "/usr/local/bin/tensorboard", line 7, in 
from tensorflow.tensorboard.tensorboard import main
File "/usr/local/lib/python3.5/dist-packages/tensorflow/tensorboard/tensorboard.py", line 34, in 
from tensorflow.tensorboard.backend import server
File "/usr/local/lib/python3.5/dist-packages/tensorflow/tensorboard/backend/server.py", line 38, in 
from tensorflow.tensorboard.plugins.projector import plugin as projector_plugin
File "/usr/local/lib/python3.5/dist-packages/tensorflow/tensorboard/plugins/projector/plugin.py", line 27, in 
from tensorflow.contrib.tensorboard.plugins.projector import PROJECTOR_FILENAME
File "/usr/local/lib/python3.5/dist-packages/tensorflow/contrib/init.py", line 29, in 
from tensorflow.contrib import factorization
File "/usr/local/lib/python3.5/dist-packages/tensorflow/contrib/factorization/init.py", line 24, in 
from tensorflow.contrib.factorization.python.ops.gmm import *
File "/usr/local/lib/python3.5/dist-packages/tensorflow/contrib/factorization/python/ops/gmm.py", line 32, in 
from tensorflow.contrib.learn.python.learn import graph_actions
File "/usr/local/lib/python3.5/dist-packages/tensorflow/contrib/learn/init.py", line 70, in 
from tensorflow.contrib.learn.python.learn import *
File "/usr/local/lib/python3.5/dist-packages/tensorflow/contrib/learn/python/init.py", line 23, in 
from tensorflow.contrib.learn.python.learn import *
File "/usr/local/lib/python3.5/dist-packages/tensorflow/contrib/learn/python/learn/init.py", line 25, in 
from tensorflow.contrib.learn.python.learn import estimators
File "/usr/local/lib/python3.5/dist-packages/tensorflow/contrib/learn/python/learn/estimators/init.py", line 310, in 
from tensorflow.contrib.learn.python.learn.estimators.dnn import DNNClassifier
File "/usr/local/lib/python3.5/dist-packages/tensorflow/contrib/learn/python/learn/estimators/dnn.py", line 29, in 
from tensorflow.contrib.learn.python.learn.estimators import dnn_linear_combined
File "/usr/local/lib/python3.5/dist-packages/tensorflow/contrib/learn/python/learn/estimators/dnn_linear_combined.py", line 33, in 
from tensorflow.contrib.learn.python.learn.estimators import estimator
File "/usr/local/lib/python3.5/dist-packages/tensorflow/contrib/learn/python/learn/estimators/estimator.py", line 51, in 
from tensorflow.contrib.learn.python.learn.learn_io import data_feeder
File "/usr/local/lib/python3.5/dist-packages/tensorflow/contrib/learn/python/learn/learn_io/init.py", line 21, in 
from tensorflow.contrib.learn.python.learn.learn_io.dask_io import extract_dask_data
File "/usr/local/lib/python3.5/dist-packages/tensorflow/contrib/learn/python/learn/learn_io/dask_io.py", line 26, in 
import dask.dataframe as dd
File "/home/cy/.local/lib/python3.5/site-packages/dask/dataframe/init.py", line 3, in 
from .core import (DataFrame, Series, Index, _Frame, map_partitions,
File "/home/cy/.local/lib/python3.5/site-packages/dask/dataframe/core.py", line 11, in 
import pandas as pd
File "/home/cy/.local/lib/python3.5/site-packages/pandas/init.py", line 22, in 
from pandas.compat.numpy import *
File "/home/cy/.local/lib/python3.5/site-packages/pandas/compat/init.py", line 357, in 
from dateutil import parser as _date_parser
File "/home/cy/.local/lib/python3.5/site-packages/dateutil/parser.py", line 158
l.append("%s=%s" % (attr, value))
^
SyntaxError: invalid syntax
#cy@cy:~/PycharmProjects/models-master/slim$ python3 train_image_classifier.py
I tensorflow/stream_executor/dso_loader.cc:135] successfully opened CUDA library libcublas.so.8.0 locally
I tensorflow/stream_executor/dso_loader.cc:135] successfully opened CUDA library libcudnn.so.5 locally
I tensorflow/stream_executor/dso_loader.cc:135] successfully opened CUDA library libcufft.so.8.0 locally
I tensorflow/stream_executor/dso_loader.cc:135] successfully opened CUDA library libcuda.so.1 locally
I tensorflow/stream_executor/dso_loader.cc:135] successfully opened CUDA library libcurand.so.8.0 locally
Traceback (most recent call last):
File "train_image_classifier.py", line 24, in 
from datasets import dataset_factory
File "/home/cy/PycharmProjects/models-master/slim/datasets/dataset_factory.py", line 21, in 
from datasets import cifar10
File "/home/cy/PycharmProjects/models-master/slim/datasets/cifar10.py", line 30, in 
slim = tf.contrib.slim
File "/usr/local/lib/python3.5/dist-packages/tensorflow/init.py", line 35, in getattr
contrib = importlib.import_module('tensorflow.contrib')
File "/usr/lib/python3.5/importlib/init.py", line 126, in import_module
return _bootstrap._gcd_import(name[level:], package, level)
File "/usr/local/lib/python3.5/dist-packages/tensorflow/contrib/init.py", line 29, in 
from tensorflow.contrib import factorization
File "/usr/local/lib/python3.5/dist-packages/tensorflow/contrib/factorization/init.py", line 24, in 
from tensorflow.contrib.factorization.python.ops.gmm import *
File "/usr/local/lib/python3.5/dist-packages/tensorflow/contrib/factorization/python/ops/gmm.py", line 32, in 
from tensorflow.contrib.learn.python.learn import graph_actions
File "/usr/local/lib/python3.5/dist-packages/tensorflow/contrib/learn/init.py", line 70, in 
from tensorflow.contrib.learn.python.learn import *
File "/usr/local/lib/python3.5/dist-packages/tensorflow/contrib/learn/python/init.py", line 23, in 
from tensorflow.contrib.learn.python.learn import *
File "/usr/local/lib/python3.5/dist-packages/tensorflow/contrib/learn/python/learn/init.py", line 25, in 
from tensorflow.contrib.learn.python.learn import estimators
File "/usr/local/lib/python3.5/dist-packages/tensorflow/contrib/learn/python/learn/estimators/init.py", line 310, in 
from tensorflow.contrib.learn.python.learn.estimators.dnn import DNNClassifier
File "/usr/local/lib/python3.5/dist-packages/tensorflow/contrib/learn/python/learn/estimators/dnn.py", line 29, in 
from tensorflow.contrib.learn.python.learn.estimators import dnn_linear_combined
File "/usr/local/lib/python3.5/dist-packages/tensorflow/contrib/learn/python/learn/estimators/dnn_linear_combined.py", line 33, in 
from tensorflow.contrib.learn.python.learn.estimators import estimator
File "/usr/local/lib/python3.5/dist-packages/tensorflow/contrib/learn/python/learn/estimators/estimator.py", line 51, in 
from tensorflow.contrib.learn.python.learn.learn_io import data_feeder
File "/usr/local/lib/python3.5/dist-packages/tensorflow/contrib/learn/python/learn/learn_io/init.py", line 21, in 
from tensorflow.contrib.learn.python.learn.learn_io.dask_io import extract_dask_data
File "/usr/local/lib/python3.5/dist-packages/tensorflow/contrib/learn/python/learn/learn_io/dask_io.py", line 26, in 
import dask.dataframe as dd
File "/home/cy/.local/lib/python3.5/site-packages/dask/dataframe/init.py", line 3, in 
from .core import (DataFrame, Series, Index, _Frame, map_partitions,
File "/home/cy/.local/lib/python3.5/site-packages/dask/dataframe/core.py", line 11, in 
import pandas as pd
File "/home/cy/.local/lib/python3.5/site-packages/pandas/init.py", line 22, in 
from pandas.compat.numpy import *
File "/home/cy/.local/lib/python3.5/site-packages/pandas/compat/init.py", line 357, in 
from dateutil import parser as _date_parser
File "/home/cy/.local/lib/python3.5/site-packages/dateutil/parser.py", line 158
l.append("%s=%s" % (attr, value))
^
SyntaxError: invalid syntax